--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,43 @@
 body{
     text-align: center;
     font-family: Open Sans,sans-serif;
-    background-color: #8a71c9;
-    color: #ffffff;
+    background-color: #F5F8FF;
+    color: #A0ABC0;
     margin: 0px 0px 30px 0px;
   } 
+
+  .p1, .p2, .p3	{
+    color: 
+    #4A5568;
+  }
+
+  h1{
+    font-size: 60px;
+    font-weight: 300;
+    color: #1A202C;
+  }
   
   h2{
-    color: #2a0074;
+    color: #225ED8;
     font-size: 40px;
     
   }
-  
-  .green-title{
-    color:#04ff9f;
+
+  h3{
+    font-size: 22px;
+    font-style: italic;
+    color: #1A202C;
+  }
+
+  h4{
+    color:
+    #FFB92E;
   }
   
-  .red-title{
-    color: #ff9e9e;
-  }
   
-  .yellow-title{
-    color: #ffe36d;
-  }
+  .subtitle1, .subtitle2, .subtitle3{
+    color: #4076ED;
+  }  
   
   section{
     width: 60%;
@@ -32,17 +47,7 @@ body{
   section section{
     width: 100%;
   }
-  h1{
-    font-size: 60px;
-    font-weight: 300;
-  }
-  
-  
-  h3{
-    font-size: 22px;
-    font-style: italic;
-  }
-  
+    
   p{
     line-height: 1.5;
     font-size: 20px;
@@ -57,27 +62,26 @@ body{
     list-style-type: none;
     line-height: 2;
     padding-left: 0;
-    
+        
   }
   
   a{
     text-decoration: none;
-    color: #99ffff;
+    color: #4A5568;
     font-weight: 700;
   }
   
   .principal{
-    background: #ff6cb5;
+    background: #A0ABC0;
     height: 40px;
     max-width: 60%;
     margin:0% auto;
-  }
-  
-  
+    border-radius: 2rem;
+  }  
   
   .principal a{
-    color: #fff;
-    text-decoration: underline;
+    color:#F2F2F2;
+    text-decoration: none;
     font-weight: normal;  
   }
   
@@ -87,11 +91,20 @@ body{
     margin: 0 89px;
   }
   
+  #botaoEnviar{
+    color: white;
+  }
   button{
-   background: #41f341;
-   border: 1px solid transparent;
-   padding: 2px 20px;
-   border-radius: 3px;
+   background: #FFB92E;
+   border: 2px solid transparent;
+   padding: 1px 20px;
+   margin-top: 10px;
+   border-radius: 2rem;
   }
   
-  
+  #nome, #email, #telefone{
+    border-radius: 2rem;
+    padding: 3px;
+    border: 0.1rem solid grey;
+
+  }
